# dpb

./: .dockerignore  .flake8  .gitignore  Dockerfile  Pipfile  README.md  build_static.sh  db.sqlite3  db.sqlite3.bak  docker-compose.test.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.sh  start_database.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  django.yml  docker-publish.yml
address_book/: models.py
adressverzeichnis/: admin.py  migrate.clj  models.py  urls.py  views.py
adressverzeichnis/clj-migrate/: migrate.clj
adressverzeichnis/migrations/: 0001_initial.py  0002_auto_20210308_1830.py  0003_manuelleberechtigung_hat_stimmrecht.py
archive/: __init__.py  admin.py  apps.py  forms.py  import_books.py  models.py  urls.py  views.py
archive/migrations/: 0001_initial.py  0001_squashed_0016_auto_20180604_2315.py  0002_auto_20150502_1204.py  0002_auto_20180706_1357.py  (+20 more)
blog/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
contact/: forms.py  models.py  urls.py  views.py
css/: _carousel.scss  style.sass
documents/: admin.py
dpb/: account_adapter.py  admin.py  apps.py  models.py  settings.py  settings_secret.py  sitemaps.py  urls.py  views.py  wsgi.py
dpbflatpages/: admin.py  apps.py  models.py  urls.py
evening_program/: admin.py  apps.py  models.py  urls.py  views.py
feedback/: admin.py  forms.py  models.py  urls.py  views.py
intern/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
links/: admin.py  models.py  urls.py  views.py
login/: forms.py  urls.py  views.py
maedchenbund/: admin.py  apps.py  models.py  urls.py  views.py
maps/: admin.py  forms.py  models.py  urls.py  views.py
pages/: admin.py  apps.py  forms.py  middleware.py  models.py  sitemaps.py  urls.py  views.py
permalink/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
polls/: models.py
sailing/: apps.py
styles/: _archive.sass  _carousel.scss  _navbar.scss  archive.css  carousel.css  navbar.css  style.sass
templates/: arbeitskreis.html  base.html  bundesordnung.html  carousel.html  datatables.html  dpb.html  footer.html  index.html  owlcarousel.html  pfadfinder.html  show_map.html
vorfreude/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+316 files in other folders)
