[project]
name = "dpb"
version = "0.1.0"
description = "Add your description here"
requires-python = "<4.0,>=3.13"
dependencies = [
    "django>=5,<6",
    "django-autoslug>=1.9.9",
    "django-filer>=3.2.3",
    "easy-thumbnails>=2.10",
    "django-forms-bootstrap>=3.1.0",
    "django-markdownify>=0.9.5",
    "django-pagedown>=2.2.1",
    "requests>=2.32.3",
    "django-allauth[socialaccount]>=65.1.0",
    "setuptools>=75.3.0",
    "psycopg[binary,pool]>=3"
]

[dependency-groups]
runtime = [
    "gunicorn>=23.0.0"
]

[tool.deptry.per_rule_ignores]
DEP002 = [
    # Used in templates
    "django-markdownify",
    "django-forms-bootstrap"
]
