[project]
name = "dpb"
version = "0.1.0"
description = "Add your description here"
requires-python = "<4.0,>=3.14"
dependencies = [
    "django>=6.0.6,<7",
    "django-autoslug>=1.9.9",
    "django-filer>=3.2.3",
    "easy-thumbnails>=2.10",
    "django-forms-bootstrap>=3.1.0",
    "django-markdownify>=0.9.7",
    "django-pagedown>=2.2.1",
    "requests>=2.34.2",
    "django-allauth[socialaccount]>=65.18.0",
    "setuptools>=83.0.0",
    "psycopg[binary,pool]>=3.3.4",
    "gunicorn>=23.0.0",
]

[tool.deptry.per_rule_ignores]
DEP002 = [
    # Used in templates
    "django-markdownify",
    "django-forms-bootstrap"
]

[tool.ruff.lint.per-file-ignores]
# Ignore `import *` in settings files, as they are used to "copy" all settings.
"dpb/settings/**.py" = ["F403"]
